# can-can-need

./: README.md  index.html  package.json  vite.config.js
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: actions.rs  main.rs
src/components/: A.vue
